<resources>
    <string name="app_name">Pelucitas</string>
    <string name="login_activity_name">Iniciar sesión</string>
    <string name="activity_registrar_correo_contrasena">Registrar</string>
    <string name="activity_registrar_datos_personales">Datos personales</string>


    <string name="str_correo">Correo</string>
    <string name="str_contrasena">Contraseña</string>
    <string name="str_siguiente">Siguiente</string>
    <string name="str_iniciarsesion">Iniciar</string>
    <string name="str_crearcuenta">Crear cuenta</string>
    <string name="str_cedula">Cedula/Identificación</string>
    <string name="str_nombre">Nombre</string>
    <string name="str_telefono_noopcional">Teléfono</string>
    <string name="str_telefono_opcional">Teléfono (Opcional)</string>
    <string name="str_apellidos">Apellidos</string>
    <string name="activity_registrar_direccion">Dirección</string>
    <string name="str_domicilio">Domicilio</string>
    <string name="str_carreracalle">Ej:calle 123</string>
    <string name="str_numeral">#</string>
    <string name="str_separador">-</string>
    <string name="str_numero1">45</string>
    <string name="str_numero2">23</string>
    <string name="str_datosadicionales">Datos adicionales</string>
    <string name="str_ej_datosadicionales">Ej: Piso 2, Dpto, 3, Timbre 5</string>
    <string name="str_barrio">Barrio</string>
    <string name="str_pais">País</string>
    <string name="str_departamento">Departamento</string>
    <string name="str_ciudad">Ciudad/Municipio</string>

    <string name="str_autenticacion_exitosa">Autenticación exitosa</string>
    <string name="str_autenticacion_fallida">Autenticación fallida</string>
    <string name="str_creacionusuario_exitosa">Usuario creado exitosamente</string>
    <string name="str_creacionusuario_fallida">No se pudo crear el usuario</string>
    <string name="str_fechanacimiento">Fecha de nacimiento (dd/mm/yyyy)</string>
    <string name="str_fechanacimientolabel">Fecha de nacimiento</string>
    <string name="activity_registrar_perfil_usuario">Elegir perfil</string>
    <string name="str_msjelegirperfil">Elige un perfil</string>
    <string name="srt_perfilcliente">Cliente</string>
    <string name="srt_perfilempleado">Empleado</string>
    <string name="srt_perfiladministrador">Administrador</string>

    <string name="error_campo_requerido">Este campo es requerido</string>
    <string name="error_msj_correonovalido">Dirección de correo no válida</string>
    <string name="error_msj_contrasenadebil">Debes elegir una contraseña de almenos 6 caracteres</string>
    <string name="error_fechanacimiento_novalida">Fecha de nacimiento no valida</string>
    <string name="error_numerotelefononovalido">Número de teléfono no valido</string>
    <string name="activity_inicio">Inicio</string>
    <string name="title_menu_administrar">Administrar</string>
    <string name="title_menu_administrar_registrarnegocio">Registar Negocio</string>
    <string name="drawer_abrir">Abrir</string>
    <string name="drawer_cerrar">Cerrar</string>
    <string name="etiqueta_info_entidad">Información Entidad</string>
    <string name="nit_negocio">Nit/Cedula responsable</string>
    <string name="nombre_negocio">Nombre Negocio</string>
    <string name="activity_registrar_minegocio">Registrar mi Negocio</string>
    <string name="title_menu_crearcuenta">Crear cuenta</string>
    <string name="str_hasiniciadosesion">Ya has iniciado sesión</string>
    <string name="str_nohasiniciadosesion">No se ha podido iniciar sesión</string>
    <string name="title_menu_micuenta">Mi cuenta</string>
    <string name="title_menu_cerrarsesion">Cerrar sesión</string>
    <string name="str_hascerradosesion">Has cerrado sesión</string>
    <string name="str_debesiniciarsesion">Debes iniciar sesión para utilizar esta opción</string>
    <string name="title_menu_iniciarsesion">Iniciar sesión</string>
    <string name="activity_registrar_horario">Registrar horario</string>
    <string name="label_seleccionarhorario">Seleccionar Dias</string>
    <string name="label_lunes">Lunes</string>
    <string name="label_martes">Martes</string>
    <string name="label_miercoles">Miércoles</string>
    <string name="label_jueves">Jueves</string>
    <string name="label_viernes">Viernes</string>
    <string name="label_sabado">Sábado</string>
    <string name="label_domingo">Domingo</string>
    <string name="hora_inicio">Hora Inicio:</string>
    <string name="hint_hora">00:00</string>
    <string name="hora_fin">Hora cierre:</string>

    <string name="str_tiponegocio">Tipo Negocio</string>
    <string-array name="arraystr_tiposnegocio">
        <item>Tipo Negocio</item>
        <item>Barberia</item>
        <item>Peluqueria</item>
        <item>Salon de Belleza</item>
    </string-array>

    <string name="titulo_horarioPicker">Seleccionar Hora</string>
    <string name="str_debeseleccionaralgundia">Debes seleccionar almenos un dia de la lista</string>
    <string name="title_menu_administrar_negocios">Admnistrar Negocio</string>
    <string name="title_menu_configuracion">Configuración</string>
    <string name="str_cerrarsesion">Cerrar sesión</string>
    <string name="str_activity_configuracion">Configuración</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_activity_administrarMisNegocios">Administrar</string>
    <string name="str_misnegocios">Mis negocios</string>
    <string name="str_informacion">Información</string>
    <string name="titulo_editarminegocio">Editar mi Negocio</string>
    <string name="str_editar">Editar</string>
    <string name="str_direccion">Direccion</string>
    <string name="str_editardireccion">Editar Dirección</string>
    <string name="str_horario">Horario</string>
    <string name="str_agregarempleado">Agregar Empleado</string>
    <string name="str_editarhorario">Editar Horario</string>
    <string name="str_administraragenda">Administrar Agenda</string>
    <string name="str_nit">Nit</string>
    <string name="str_minegocio">Mi negocio</string>
    <string name="str_telefono">Teléfono</string>
    <string name="titulo_alertpermisos">Permisos necesarios</string>
    <string name="mensaje_alertpermisos">El permiso de almacenamiento externo es necesario</string>
    <string name="str_permisosdenegados">No se han habilitados los permisos</string>
    <string name="str_obteniendoinformacion">Obteniendo información</string>
    <string name="str_cargando">Cargando</string>
    <string name="st_camara">Cámara</string>
    <string name="st_galeria">Galería</string>
    <string name="st_cancelar">Cancelar</string>
    <string name="st_elegirImagen">Elegir imagen</string>
    <string name="st_selecImagen">Seleccionar imagen</string>
    <string name="str_perfil">Perfil</string>
    <string name="str_localizacion">Localizacion</string>
    <string name="str_micuenta">Mi cuenta</string>
    <string name="str_empleados">Empleados</string>
    <string name="str_cancelar">Cancelar</string>

    <string name="str_toca_ver_opciones">Toca para ver las opciones</string>
    <string name="str_informacion_personal">Informacion personal</string>
    <string name="str_perfiles">Perfiles</string>
    <string name="str_editardatospersonales">Editar Informacion personal</string>
    <string name="srt_ditarperfilusuario">Editar perfil</string>
    <string name="str_agenda">Agenda</string>
    <string name="str_hora">Hora</string>
    <string name="str_reservado">Reservado</string>
    <string name="str_noagenda">No hay agenda registrada para este dia</string>
    <string name="str_tituloactivitylistagenda">Agenda para el dia</string>
    <string name="str_agregaragenda">Agregar agenda</string>
    <string name="str_seleccionar_hora_agenda">Seleccionar Hora</string>
    <string name="str_disponible">Disponible</string>
    <string name="str_no_se_puede_agregar_agenda_para_este_dia">No se puede agregar agenda para este dia</string>
    <string name="title_menu_inicio">Inicio</string>
    <string name="title_menu_localizar">Localizar</string>
    <string name="str_tiponegocio_salonbelleza">Salon de belleza</string>
    <string name="str_tiponegocio_peluqueria">Peluqueria</string>
    <string name="str_tiponegocio_barberia">Barberia</string>
    <string name="str_inicio">Inicio</string>
    <string name="str_agendar">Agendar</string>
    <string name="str_reservar">Reservar</string>
    <string name="str_descripcionnegocio">Descripcion del negocio (Maximo 500 caracteres)</string>
    <string name="str_mensaje_error_nityaingresado">No se puede insertar este negocio, el nit ya se encuentra registrado, por favor intenta con otro nit</string>
    <string name="str_tiponegocio_salones_de_belleza">Salones de belleza</string>
    <string name="str_activity_empleados">Empleados</string>
    <string name="str_mensaje_error_ingresarhoraagenda">No se puede ingesar esta hora en la agenda, esta hora ya se inserto, intenta con otra</string>
    <string name="str_aceptar">Aceptar</string>
    <string name="title_menu_agenda">Agenda</string>
    <string name="str_configurar_agenda">Configurar Agenda</string>
    <string name="str_turnos">Turnos</string>
    <string name="title_menu_turnos">Turnos</string>
    <string name="str_cancelarturno">Cancelar Turno</string>
    <string name="str_fechaturno">Fecha Turno</string>
    <string name="title_menu_eliminar_turnos_vencidos">Eliminar Turnos Vencidos</string>
    <string name="title_menu_cancelar_proximos_turnos">Cancelar proximos Turnos</string>
    <string name="str_mensaje_turno_cancelado">El turno se ha cancelado satisfactoriamente</string>
    <string name="str_msj_subir_imagen_negocio">Se subira la foto de tu negocio, verifica el progreso en la ventana de notificaciones</string>
    <string name="str_informacion_empleado">Informacion Empleado</string>
    <string name="str_msj_empleado_ya_agregado">Este empleado ya esta agregado a tu negocio, intenta con otro</string>
    <string name="str_msj_empleado_agregado">Se agregó empleado a tu negocio</string>
    <string name="str_agregar">Agregar</string>

</resources>
