<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registrar_datos_personales"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.com.fredymosqueralemus.pelucitas.RegistrarDireccionActivity">

    <EditText
        android:id="@+id/pais_etxt_registrardireccionlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_pais"/>

    <EditText
        android:id="@+id/departamento_etxt_registrardireccionlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_departamento"/>

    <EditText
        android:id="@+id/ciudadmunicipio_etxt_registrardireccionlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_ciudad"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/str_domicilio" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:padding="16dp"
        android:rowCount="4">

    <EditText
        android:id="@+id/carreracalle_etxt_registrardireccionlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/str_carreracalle"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/str_numeral" />

    <EditText
        android:id="@+id/numero1_etxt_registrardireccionlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/str_numero1"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/str_separador"
        />
    <EditText
        android:id="@+id/numero2_etxt_registrardireccionlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/str_numero2"/>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:padding="16dp"
        android:rowCount="1">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/str_datosadicionales" />

        <EditText
            android:id="@+id/datosadicionales_etxt_registrardireccionlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_ej_datosadicionales"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/str_barrio" />

        <EditText
            android:id="@+id/barrio_etxt_registrardireccionlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </GridLayout>

    <LinearLayout
        android:id="@+id/linear_layout_editar_cancelar_registrardireccionlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">
        <Button
            android:id="@+id/btn_cancelar_registrardireccionlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/str_cancelar"
            android:onClick="cancelarEdicionDireccion"/>

        <Button
            android:id="@+id/btn_editardireccionusuairo_registrardireccionlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/str_editar"
            android:onClick="editarDireccionUsuario"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btn_editardireccionminegocio_registrardireccionlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/str_editar"
            android:onClick="editarDireccionMiNegocio"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_registrardireccion_registrardireccionlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">
    <Button
        android:id="@+id/siguiente_btn_registrardireccionlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_siguiente"
        android:onClick="registrarDireccion"/>
        </LinearLayout>

</LinearLayout>
 </ScrollView>

