<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registrar_mi_negocio"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.com.fredymosqueralemus.pelucitas.RegistrarMiNegocioActivity">

    <TextView
        android:id="@+id/titulo_informacion_entidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/etiqueta_info_entidad"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/nit_negocio_etxt_registrarminegocio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nit_negocio"/>

    <EditText
        android:id="@+id/nombre_negocio_etxt_registrarminegocio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_negocio"/>
    <EditText
        android:id="@+id/telefono_etxt_registrarminegocio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_telefono_noopcional"
        android:inputType="number"
        android:digits="0123456789"
        />
    <Spinner
        android:id="@+id/tipo_negocio_spn_registrardatospersonaleslayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />


    <EditText
        android:id="@+id/descripcion_negocio_etxt_registrarminegocio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_descripcionnegocio"/>
    <LinearLayout
        android:id="@+id/linear_layout_editarinforamcionminegocio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">
        <Button
            android:id="@+id/btn_cancelar_registrarminegocio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/str_cancelar"
            android:onClick="cancelarEdicionMiNegocio"/>

        <Button
            android:id="@+id/btn_editar_registrarminegocio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/str_editar"
            android:maxLength="500"
            android:onClick="editarInformacionMiNegocio"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_registrarinformacionminegocio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/siguiente_btn_registrarminegocio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/str_siguiente"
            android:onClick="registrarInformacionMiNegocio"/>
    </LinearLayout>

</LinearLayout>

</ScrollView>
