<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registrar_datos_personales"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.com.fredymosqueralemus.pelucitas.RegistrarDatosPersonalesActivity">
    <EditText
        android:id="@+id/cedula_ext_registrardatospersonaleslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_cedula"/>
    <EditText
        android:id="@+id/nombre_ext_registrardatospersonaleslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/str_nombre"
        />
    <EditText
        android:id="@+id/apellidos_ext_registrardatospersonaleslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/str_apellidos"
        />
    <EditText
        android:id="@+id/telefono_ext_registrardatospersonaleslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/str_telefono"
        />
    <Button
        android:id="@+id/siguiente_btn_registrardatospersonaleslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_siguiente"
        android:onClick="registrarDatosPersonales"/>

</LinearLayout>
</ScrollView>
