<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="co.com.fredymosqueralemus.pelucitas.LoginActivity">

    <EditText
        android:id="@+id/correo_etxt_loginlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_correo"/>
    <EditText
        android:id="@+id/contrasena_etxt_loginlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/str_contrasena"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/iniciarsesion_btn_loginlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_iniciarsesion"/>
    <Button
        android:id="@+id/crearcuenta_btn_loginlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_crearcuenta"/>

</LinearLayout>
</ScrollView>
