<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registrar_horario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.com.fredymosqueralemus.pelucitas.RegistrarHorarioActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_seleccionarhorario"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chkb_dia_lunes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

                <TextView
                    android:id="@+id/txtv_dia_lunes_registrarhorariolayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/label_lunes" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chkb_dia_martes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

                <TextView
                    android:id="@+id/txtv_dia_martes_registrarhorariolayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/label_martes" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chkb_dia_miercoles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtv_dia_miercoles_registrarhorariolayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/label_miercoles" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">


                <CheckBox
                    android:id="@+id/chkb_dia_jueves"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/txtv_dia_jueves_registrarhorariolayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/label_jueves" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">


                <CheckBox
                    android:id="@+id/chkb_dia_viernes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/txtv_dia_viernes_registrarhorariolayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/label_viernes" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">


                <CheckBox
                    android:id="@+id/chkb_dia_sabado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

                <TextView
                    android:id="@+id/txtv_dia_sabado_registrarhorariolayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/label_sabado" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chkb_dia_domingo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtv_dia_domingo_registrarhorariolayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/label_domingo" />
            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="15"
                android:padding="16dp"
                android:rowCount="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:text="@string/hora_inicio" />

                <EditText
                    android:id="@+id/hora_inicio_horari_entidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="14"
                    android:layout_row="0"
                    android:editable="false"
                    android:hint="@string/hint_hora" />

            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="15"
                android:padding="16dp"
                android:rowCount="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"

                android:layout_row="0"
                android:text="@string/hora_fin" />

            <EditText
                android:id="@+id/hora_fin_horari_entidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="14"
                android:layout_row="0"
                android:editable="false"
                android:hint="@string/hint_hora" />

            </GridLayout>

            <Button
                android:id="@+id/siguiente_btn_registrarhorariolayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/str_siguiente"
                android:onClick="registrarHorario"/>
        </LinearLayout>



    </LinearLayout>
</LinearLayout>
</ScrollView>
